<resources>
    <string name="app_name">Tarea1</string>
    <string name="label_1">Bienvenido</string>
    <string name="img_1">logo</string>
    <string name="btn_1">Regístrate</string>
    <string name="btn_2">Ingresa</string>
    <string name="label_2">ACCEDE</string>
    <string name="text_1">Dirección de correo</string>
    <string name="text_2">Contraseña</string>
    <string name="btn_3">Ingresar ahora</string>
    <string name="label_3">¿Olvidaste tu contraseña?</string>
    <string name="label_4">¿No tienes una cuenta?</string>
    <string name="btn_4">Crear cuenta</string>
    <string name="label_5">CREA UNA CUENTA</string>
    <string name="text_3">Usuario</string>
    <string name="label_6">¿Ya tienes una cuenta?</string>
    <string name="btn_5">Regresar al login</string>
    <string name="label_7">Accede para unirte a las comunidades</string>
    <string name="label_8">Regístrate para obtener contenidos personalizados</string>
    <string name="label_9">SELECCIONA OPCIÓN</string>
    <string name="label_10">Elige una opción para mostrar en la app</string>
    <string name="btn_6">Calculadora</string>
    <string name="btn_7">Calcula tu IMC</string>
    <string name="btn_8">Galería de fotos</string>
    <string name="btn_9">Perfil personal</string>
    <string name="label_11">Modifica tus datos personales</string>
    <string name="btn_10">Salir</string>
    <string name="label_12">Número 1</string>
    <string name="label_13">Número 2</string>
    <string name="vacio" />
    <string name="label_14">Resultado: </string>
    <string name="btn_suma">+</string>
    <string name="btn_resta">-</string>
    <string name="btn_div">/</string>
    <string name="btn_mult">*</string>
    <string name="btn_11">Regresar al Menú</string>
    <string name="label_alt">Ingresa altura (mts):</string>
    <string name="label_peso">Ingresa peso (kg):</string>
</resources>
