<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="228dp"
        android:layout_height="137dp"
        android:layout_gravity="end"
        android:contentDescription="@string/img_1"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_2"
        android:textColor="#4A4A66"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:text="@string/label_7"
        android:textColor="#4A4A66" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="#EAEAEA"
        android:ems="10"
        android:hint="@string/text_3"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="#EAEAEA"
        android:ems="10"
        android:hint="@string/text_2"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/boton"
        android:text="@string/btn_3"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="29dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/label_3"
        android:textColor="#4A4A66" />

    <TextView
        android:id="@+id/space4"
        android:layout_width="match_parent"
        android:layout_height="29dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/label_4"
        android:textColor="#4A4A66" />

    <TextView
        android:id="@+id/space5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/boton_gris"
        android:text="@string/btn_4"
        android:textColor="#4A4A66" />

</LinearLayout>