<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".CrearCuenta">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="228dp"
        android:layout_height="137dp"
        android:layout_gravity="end"
        android:contentDescription="@string/img_1"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_5"
        android:textColor="#4A4A66"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_8"
        android:textColor="#4A4A66" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="#EAEAEA"
        android:ems="10"
        android:hint="@string/text_1"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/space6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="#EAEAEA"
        android:ems="10"
        android:hint="@string/text_3"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/space7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="#EAEAEA"
        android:ems="10"
        android:hint="@string/text_2"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/space8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/boton"
        android:text="@string/btn_4"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/space9"
        android:layout_width="match_parent"
        android:layout_height="29dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/label_6"
        android:textColor="#4A4A66" />

    <TextView
        android:id="@+id/space10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/boton_gris"
        android:text="@string/btn_5"
        android:textColor="#4A4A66" />
</LinearLayout>