<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".IMC">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="228dp"
        android:layout_height="123dp"
        android:layout_gravity="end"
        android:contentDescription="@string/img_1"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_alt" />

        <EditText
            android:id="@+id/alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/vacio"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <TextView
        android:id="@+id/space19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_peso" />

        <EditText
            android:id="@+id/peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/vacio"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:id="@+id/space20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/boton"
        android:text="@string/btn_7"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/space21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/boton_gris"
        android:text="@string/btn_11"
        android:textColor="#4A4A66" />

</LinearLayout>